# test-apps

./: .gitignore  README.md  deploy-all.R  justfile  renovate.json
.github/workflows/: check-ricochet-ids.yml
ambiorix-api/: _ricochet.toml  app.R
ambiorix-hello-world/: _ricochet.toml
bookdown-test/: .gitignore  _bookdown.yml  _ricochet.toml  bookdown-test.rds  index.Rmd
dash-jl/: Manifest.toml  _ricochet.toml  app.jl
geocode-shiny/: _ricochet.toml
jl-hello-world/: Manifest.toml  Project.toml  _ricochet.toml  main.jl
list-paths/: _ricochet.toml  app.R
persistent-sqlite/: README.md  _ricochet.toml  app.R
plumb-default/: _ricochet.toml  plumber.R
plumb-file/: _ricochet.toml  plumber.R
plumber-headers/: README.md  _ricochet.toml  plumber.R
polls-538/: _ricochet.toml  main.R  polls.json
pricing/: _ricochet.toml  app.R
python/dash-hello/: _ricochet.toml  app.py  pyproject.toml
python/fastapi-hello/: app.py  (+2 more)
python/shiny-py-example/: README.md  _ricochet.toml  pyproject.toml
python/shiny-py-example/data/: king-county-housing.parquet
python/shiny-py-lonboard/: README.md  _ricochet.toml  app.py  pyproject.toml
quarto/: README.md  clean-ricochet-toml-ids.R
quarto-dashboard/: .gitignore  _ricochet.toml
quarto-shiny/: README.md  _ricochet.toml
rev-geocode-shiny/: _ricochet.toml  app.R
rmd-538/: _ricochet.toml  main.Rmd
rmd-parameterized/: index.Rmd  params.yaml
sleepy/: _ricochet.toml  main.R
srvrless-hello/: README.md  _ricochet.toml  hello-world.R
svi-dashboard/: _ricochet.toml  app.R
waiting/: _ricochet.toml  app.R  server.R
(+30 files in other folders)
