[project]
name = "shiny-py-lonboard"
version = "0.1.1"
description = "Shiny for python with lonboard"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "geopandas>=1.1.3",
  "lonboard>=0.16.0",
  "matplotlib>=3.10.8",
  "pyarrow>=23.0.1",
  "shiny>=1.6.0",
  "shinywidgets>=0.7.2",
]
